Sat Feb  9 14:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* dbprovider.c, relational.c: Added game stats to database

Fri Feb  8 23:11:13 CET 2008 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, dbprovider.c, relational.h: allow code to compile
	without python and fix a couple of minor warnings

Fri Feb  8 11:24:23 CET 2008 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, configure.in: compile in native sqlite3 on linux

Thu Feb  7 22:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* dbprovider.c: Added native sqlite interface.

Wed Feb  6 22:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* dbprovider.c+.h, gnubg.c, relational.c, gtkrelational.c, database.py:
	Move relational code out of database.py and into relational.c

Sun Feb  3 16:34:37 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c: size cube and dice widgets according to board size
	* gtkgame.c, gtkpanels.c, gtkprefs.c, gtkrelational.c, gtktheory.c:
	replace deprecated gtk_widget_set_usize with
	gtk_widget_set_size_request

Sun Feb  3 01:02:54 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, relational.c, scripts/database.py: allow creation of
	default sqlite database in szHomeDirectory. Look for database conf
	file in szHomeDirectory. MIGHT DISTURB EXISTING USERS?

Sun Feb  3 00:47:49 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gtksplash.c: disable splash unless asked for. Shorten
	pauses a bit

Thu Jan 31 17:20:11 CET 2008 Christian Anthon <anthon@kiku.dk>

	* multithread.c: check if g_threads already initialized.

Mon Jan 21 00:36:53 CET 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, dice.c, eval.c, gnubg.c, gtkboard.c, gtkexport.c,
	gtkoptions.c, import.c, makebearoff.c, makehyper.c, relational.c,
	render.c, rollout.c, sgf.c: replace uint with unsigned int

Sat Jan 19 21:45:51 CET 2008 Christian Anthon <anthon@kiku.dk>

	* eval.c: fix a potential signed/unsigned problem in crashed net

Sat Jan 19 09:58:13 CET 2008 Christian Anthon <anthon@kiku.dk>
